added --appname option to set the cascading application name

--- a/etc/providedCompile.gradle
+++ b/etc/providedCompile.gradle
@@ -36,6 +36,13 @@ idea {
   }
 }
 
+eclipse {
+    classpath{
+        plusConfigurations += configurations.providedCompile
+    }
+}
+
+
 javadoc {
   classpath += configurations.providedCompile
 }
