--- a/build.gradle
+++ b/build.gradle
@@ -54,11 +54,16 @@ repositories{
 }
 
 dependencies {
-  compile group: 'cascading', name: 'cascading-core', version: cascadingVersion
-  compile group: 'cascading', name: 'cascading-hadoop', version: cascadingVersion
+  compile group: 'cascading', name: 'cascading-core', version: cascadingVersion, changing: true
+  compile group: 'cascading', name: 'cascading-hadoop', version: cascadingVersion, changing: true
+  compile group: 'cascading', name: 'cascading-local', version: cascadingVersion, changing: true
+  compile group: 'cascading', name: 'cascading-platform', version: cascadingVersion, changing: true
 
   testCompile group: 'junit', name: 'junit', version: '4.11'
   testCompile group: 'cascading', name: 'cascading-core', version: cascadingVersion, classifier: 'tests', changing: true
+  testCompile group: 'cascading', name: 'cascading-platform', version: cascadingVersion, classifier: 'tests', changing: true
+  testCompile group: 'cascading', name: 'cascading-hadoop', classifier: 'tests', version: cascadingVersion, changing: true
+  testCompile group: 'cascading', name: 'cascading-local', classifier: 'tests',  version: cascadingVersion, changing: true
   testCompile( group: 'org.apache.hadoop', name: 'hadoop-test', version: hadoopVersion ) {
     exclude group: 'oro'
   }
@@ -164,5 +169,20 @@ task markdown( dependsOn: jar ) << { task ->
   if( proc.waitFor() != 0 )
   {
     throw new RuntimeException( 'exec failed' )
+  }
+}
+
+idea {
+  module {
+    downloadJavadoc = true
+    downloadSources = true
+  }
+}
+
+eclipse {
+  classpath {
+    defaultOutputDir = file( 'build' )
+    downloadSources = true
+    downloadJavadoc = true
   }
 }
