--- a/etc/synchronizer.properties
+++ b/etc/synchronizer.properties
@@ -32,7 +32,7 @@ filecomparer.skip-symlinks=true
 #filecomparer.use-md5-files=true
 #filecomparer.generate-md5-files=true
 #filecomparer.md5-files-root-dir=.cache
-filecomparer.skip-upload-of-md5-files=true
+#filecomparer.skip-upload-of-md5-files=true
 filecomparer.assume-local-latest-in-mismatch=false
 
 # Page Caching - none
