--- a/etc/dependencyVersions.gradle
+++ b/etc/dependencyVersions.gradle
@@ -25,37 +25,9 @@ ext.cascadingVersion = '2.5.2-+'
 
 // set property to use locally installed cascading builds
 // otherwise wip releases will be pulled from conjars
-if( System.properties[ 'lingual.release.local' ] )
-  ext.cascadingVersion = '2.2.0-wip-dev'
+if( System.properties[ 'multitool.release.local' ] )
+  ext.cascadingVersion = '2.5.2-wip-dev'
 
-ext.bindVersion = "wip-106"
-ext.bindChanging = false
-ext.linq4jVersion = '0.1.8'
-ext.linq4jChanging = false
-ext.optiqVersion = '0.4.12.2'
-ext.optiqChanging = false
-
-// set the following property in $root/gradle.properties to use local installs of optiq/linq4j
-// systemProp.optiq.release.local=true
-if( System.properties[ 'optiq.release.local' ] )
-{
-  ext.linq4jVersion = "${linq4jVersion}-SNAPSHOT"
-  ext.linq4jChanging = true
-  ext.optiqVersion = "${optiqVersion}-SNAPSHOT"
-  ext.optiqChanging = true
-}
-// set the following property in $root/gradle.properties to use local installs of bind
-// systemProp.bind.release.local=true
-if( System.properties[ 'bind.release.local' ] )
-{
-  ext.bindVersion = "wip-dev"
-  ext.bindChanging = true
-}
-ext.cascadingBindVersion = "1.0.0-${bindVersion}"
-
-/*
- * Dependencies not directly related to cascading get versions defined here
- */
 ext.hadoopVersion = '1.2.1'
 
 ext.hadoop2Version = '2.2.0'
