--- a/etc/s3Upload.gradle
+++ b/etc/s3Upload.gradle
@@ -25,7 +25,7 @@ buildscript {
   repositories {
     mavenLocal()
     mavenCentral()
-    mavenRepo name: 'monochromeroad', url: 'http://repository-monochromeroad.forge.cloudbees.com/release/'
+    maven{ url 'http://repository-monochromeroad.forge.cloudbees.com/release/' }
   }
   dependencies {
     classpath 'com.monochromeroad.gradle:gradle-aws-s3-sync:0.4'
