--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ buildscript {
     maven { url 'http://repo.springsource.org/plugins-release' }
   }
   dependencies {
-    classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.4'
-    classpath 'eu.appsatori:gradle-fatjar-plugin:0.2-rc1'
+    classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.5'
+    classpath 'eu.appsatori:gradle-fatjar-plugin:0.2'
   }
 }
 
