--- a/multitool-hadoop/build.gradle
+++ b/multitool-hadoop/build.gradle
@@ -26,7 +26,7 @@ buildscript {
   }
 
   dependencies {
-      classpath 'eu.appsatori:gradle-fatjar-plugin:0.2-rc1'
+      classpath 'eu.appsatori:gradle-fatjar-plugin:0.2'
   }
 }
 
