--- a/etc/dependencyVersions.gradle
+++ b/etc/dependencyVersions.gradle
@@ -21,12 +21,12 @@
 /*
  * Dependencies directly related to cascading get versions defined here
  */
-ext.cascadingVersion = '2.6.0'
+ext.cascadingVersion = '2.7.0-wip-+'
 
 // set property to use locally installed cascading builds
 // otherwise wip releases will be pulled from conjars
 if( System.properties[ 'multitool.release.local' ] )
-  ext.cascadingVersion = '2.6.0-wip-dev'
+  ext.cascadingVersion = '2.7.0-wip-dev'
 
 ext.hadoopVersion = '1.2.1'
 
