--- a/settings.gradle
+++ b/settings.gradle
@@ -24,5 +24,6 @@ include 'multitool-core'
 include 'multitool-local'
 include 'multitool-hadoop'
 include 'multitool-hadoop2-mr1'
+include 'multitool-hadoop2-tez'
 include 'multitool-platform'
 include 'multitool-docs'
