--- a/multitool-platform/build.gradle
+++ b/multitool-platform/build.gradle
@@ -25,15 +25,13 @@ dependencies {
   testCompile group: 'cascading', name: 'cascading-core', version: cascadingVersion, classifier: 'tests', changing: true
   testCompile group: 'cascading', name: 'cascading-platform', version: cascadingVersion, classifier: 'tests', changing: true
 
-  testCompile group: 'commons-io', name: 'commons-io', version: commonsIoVersion
-
   testCompile group: 'log4j', name: 'log4j', version: log4jVersion // for setting log level as a cli option
   testCompile group: 'org.slf4j', name: 'slf4j-api', version: slf4jVersion
   testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: slf4jVersion
-
 }
 
 test {
   scanForTestClasses = false
   exclude( "**/*Test.class" )
+  enabled = false
 }
