--- a/etc/dependencyVersions.gradle
+++ b/etc/dependencyVersions.gradle
@@ -21,7 +21,7 @@
 /*
  * Dependencies directly related to cascading get versions defined here
  */
-ext.cascadingVersion = '2.7.0-wip-+'
+ext.cascadingVersion = '2.7.0'
 
 // set property to use locally installed cascading builds
 // otherwise wip releases will be pulled from conjars
